Test/typing/should_fail/methods_normal_no_body.java
package toto;

class A {
    private int myMethod();
}